# filuskepfari

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  emailparameter.cpp  emailparameter.h  errorcodes.h  fskep_globals.h  main.cpp  nextcloudusers.cpp  nextcloudusers.h  parameter.cpp  parameter.h  service.cpp  service.h  stringparameter.cpp  stringparameter.h  telephoneparameter.cpp  telephoneparameter.h  urlparameter.cpp  urlparameter.h
translations/: CMakeLists.txt  filuskepfari.ts  filuskepfari_de.ts
